css/main.css
html, body, img, dl, dt, dd {
	margin: 0;
	padding: 0;
	background-color: #23232D;
}
h1, h2, h3, h4 {
	margin: 0;
	padding: 0;
}

#frame {
	position: absolute;
	width: 100%;
	height: 100%;
	background-color: #23232D;
}

#loader {
	position: absolute;
	height: 40px;
	width: 40px;
	top: 50%;
	left: 50%;
	margin: -20px 0 0 -20px;
	font-family: "Helvetica Neue", Verdana;
	color: #fff;
	font-size: 0.6em;
	text-transform: uppercase;
}

#results {
	display: none;
}

.thumbnail, .cover {
	width: 250px;
	height: 250px;
	float: left;
	overflow: hidden;
	cursor: pointer;
}
.thumbnail .cover {
	position: absolute;
}

.btn-play {
	position: absolute;
	z-index: 1000;
	width: 30px;
	height: 30px;
	background: transparent;
	vertical-align: middle;
}

.overlay {
	position: absolute;
	height: 100%;
	width: 100%;
	background-color: #23232D;
}

.track-information {
	width: 100%;
	z-index: 1000;
	position: absolute;
	padding: 20px;
}
.track-information h1 {
	font-weight: normal;
	font-family: Avenir;
	font-size: 16px;
	color: #FFFFFF;
	line-height: 22px;
}
.track-information h2 {
	font-weight: normal;
	font-family: Avenir;
	font-size: 15px;
	color: #FFFFFF;
	line-height: 22px;
}

